changed: show truncated single value in select/select1 minimal widget + wider widget, https://github.com/kobotoolbox/enketo-express/issues/136

--- a/src/sass/core/_variables.scss
+++ b/src/sass/core/_variables.scss
@@ -108,3 +108,5 @@ $state-danger-bg: #f2dede !default;
 $state-danger-border: darken(adjust-hue($state-danger-bg, -10), 5%) !default;
 
 //#EED3D7;
+
+$golden-ratio: 1.61803;
